# visao-computacional

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  settings.ini
.github/workflows/: ci.yml
02_Fundamentos_do_Processamento_de_Imagem/: 1. Como Funciona o OpenCV.ipynb  2. Anotações em Imagens.ipynb  3. Carregando e Salvando Imagens.ipynb  4. Espaço de Cores.ipynb
03_Filtragem_e_Melhoramento_de_Imagem/: 1. O Espaço de Cor HSV.ipynb
04_Feature_Detection/: 1. Tipos de Features.ipynb
nbs/: index.ipynb  nbdev.yml
notebooks/: 00_Configuracao_Inicial.ipynb  01_02_teoria_das_cores.ipynb  01_03_operacoes_basicas_e_matematicas_em_imagens.ipynb  01_04_anotacoes_em_imagens.ipynb  01_Introducao_Visao_Computacional.ipynb  01_introducao_a_visao_computacional.ipynb  02_fundamentos_do_processamento_de_imagens.ipynb  04_01_deteccao_facial_dnn.ipynb  04_01_deteccao_facial_e_landmarks.ipynb  04_deteccao_facial_e_landmarks.ipynb  05_deteccao_de_objetos_com_yolov8.ipynb  initial_setup.ipynb
notebooks/2-processamento-digital-de-imagens/: 1_HSV.ipynb  2_Equalização_de_Histogramas.ipynb  3_Thresholding.ipynb
notebooks/modulo-complementar/: yolov9_deteccao_de_objetos.ipynb
projetos/: modulo_05_projeto1_deteccao_de_objetos_com_yolov8.ipynb
projetos/projeto_01/: README.md  identificar_cor.py  projeto_01.py  requirements.txt
projetos/projeto_05/: projeto_05.py
sigmoidal/: __init__.py  paths.py
sigmoidal/utils/: data.py  notebook.py
src/: paths.py
tests/: test_setup.py
visao_computacional/: _modidx.py
