[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Carlos Melo <carlos@sigmoidal.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12.0"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
supervision = "^0.16.0"
isort = "^5.12.0"
blue = "^0.9.1"
mkdocs = "^1.5.3"
pydocstyle = "^6.3.0"
taskipy = "^1.12.0"
ipykernel = "^6.26.0"
mkdocstrings-python = "^1.7.3"
pygments = "^2.16.1"
mkdocs-material = "^9.4.7"
pymdown-extensions = "^10.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "isort . && blue ."